components/release-demo-component-a/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: release-demo-app
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: release-demo-component-a
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elrelease-demo-component-a
  namespace: release-demo
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-release-demo-component-a
    weight: null
status: {}
